feat: let team admins delete characteristics
